--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -11,10 +11,32 @@
 
 
         <TextView
+            android:id="@+id/txt_fname"
+            android:paddingStart="50dp"
+            android:layout_marginTop="60dp"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:text="First name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/txt_sname"
+            android:paddingStart="50dp"
+            android:layout_marginTop="20dp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="40sp"
+            android:text="Second name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:layout_marginTop="30dp"
             android:paddingHorizontal="100dp"
             android:id="@+id/txt_result"
             android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="140dp"
             android:textSize="60dp"
             android:textColor="@color/white"
             android:textStyle="bold"
