--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -7,12 +7,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ResultFragment">
+    tools:context=".ui.fragment.result.ResultFragment">
 
 
         <TextView
             android:id="@+id/txt_fname"
-            android:paddingStart="50dp"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:layout_marginTop="60dp"
             android:textSize="40sp"
             android:textStyle="bold"
@@ -23,7 +24,8 @@
 
         <TextView
             android:id="@+id/txt_sname"
-            android:paddingStart="50dp"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:layout_marginTop="20dp"
             android:textColor="@color/white"
             android:textStyle="bold"
@@ -33,10 +35,10 @@
             android:layout_height="wrap_content"/>
 
         <TextView
+            android:layout_gravity="center"
+            android:gravity="center"
             android:layout_marginTop="30dp"
-            android:paddingHorizontal="100dp"
             android:id="@+id/txt_result"
-            android:layout_marginHorizontal="20dp"
             android:textSize="60dp"
             android:textColor="@color/white"
             android:textStyle="bold"
@@ -46,6 +48,7 @@
 
 
         <ImageView
+            android:layout_gravity="center"
             android:src="@drawable/img_1"
             android:layout_marginTop="60dp"
             android:layout_width="400dp"
