SharedPreference_Room_onBoard

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -16,4 +16,14 @@
         android:name="com.geektech.lovecalculatore.ui.fragment.result.ResultFragment"
         android:label="fragment_result"
         tools:layout="@layout/fragment_result" />
+    <fragment
+        android:id="@+id/boardFragment"
+        android:name="com.geektech.lovecalculatore.ui.fragment.board.BoardFragment"
+        android:label="fragment_board"
+        tools:layout="@layout/fragment_board" />
+    <fragment
+        android:id="@+id/historyFragment"
+        android:name="com.geektech.lovecalculatore.ui.fragment.history.HistoryFragment"
+        android:label="fragment_history"
+        tools:layout="@layout/fragment_history" />
 </navigation>
