--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragment.MainFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ui.fragment.main.MainFragment">
 
     <LinearLayout
         android:background="@color/black"
@@ -48,5 +48,25 @@
             android:layout_height="wrap_content"/>
 
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/img_history"
+        android:src="@drawable/ic_baseline_change_history_24"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="60dp"
+        android:layout_height="60dp"/>
+
+    <TextView
+        android:id="@+id/txt_history"
+        android:textColor="@color/white"
+        android:text="@string/history"
+        app:layout_constraintEnd_toEndOf="@id/img_history"
+        app:layout_constraintTop_toBottomOf="@id/img_history"
+        app:layout_constraintStart_toStartOf="@id/img_history"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
