--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:layout_centerHorizontal="true"
-    android:orientation="vertical"
+<androidx.constraintlayout.widget.ConstraintLayout
     android:background="@color/black"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragment.result.ResultFragment">
+    tools:context=".ui.fragment.result.ResultFragment"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+
+        <LinearLayout
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="350dp">
 
 
         <TextView
@@ -39,7 +47,7 @@
             android:gravity="center"
             android:layout_marginTop="30dp"
             android:id="@+id/txt_result"
-            android:textSize="60dp"
+            android:textSize="60sp"
             android:textColor="@color/white"
             android:textStyle="bold"
             android:text="result"
@@ -47,13 +55,28 @@
             android:layout_height="wrap_content"/>
 
 
+        </LinearLayout>
+
+
         <ImageView
-            android:layout_gravity="center"
-            android:src="@drawable/img_1"
-            android:layout_marginTop="60dp"
-            android:layout_width="400dp"
-            android:layout_height="400dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/img_history"
+            android:src="@drawable/ic_baseline_change_history_24"
+            android:layout_marginBottom="80dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="60dp"
+            android:layout_height="60dp"/>
+
+        <TextView
+            android:id="@+id/txt_history"
+            android:textColor="@color/white"
+            android:text="@string/his"
+            app:layout_constraintEnd_toEndOf="@id/img_history"
+            app:layout_constraintTop_toBottomOf="@id/img_history"
+            app:layout_constraintStart_toStartOf="@id/img_history"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
 
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
