--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#F3E6E6</color>
-    <color name="pink">#FF2B7F</color>
+    <color name="red">#ED0A0A</color>
 </resources>
